--- a/mysql_node/sequelize_mysql2/package.json
+++ b/mysql_node/sequelize_mysql2/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5"
+  }
 }
